send message to players